[package]
name = "poormans-ddns"
version = "0.1.0"
authors = ["Eric Mikulin <ericm99@gmail.com>"]
edition = "2021"

[dependencies]
clap = "3.1"
clokwerk = "0.3"
retry = "1.3"
serde = "1.0"
serde_derive = "1.0"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "rustls-tls"]

[dependencies.config]
version = "0.12"
features = ["toml"]
