[package]
name = "poormans-ddns"
version = "0.1.0"
authors = ["Eric Mikulin <ericm99@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
clokwerk = "0.3"
config = { version = "0.12", features = ["toml"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
